Desktop: Resolves #4155: Don’t unpin app from taskbar on update (#6271)

--- a/packages/app-desktop/package.json
+++ b/packages/app-desktop/package.json
@@ -67,7 +67,7 @@
     },
     "nsis": {
       "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
+      "allowToChangeInstallationDirectory": false,
       "differentialPackage": false
     },
     "portable": {
