Desktop: Resolves #6100: Allow saving a Mermaid graph as a PNG or SVG via context menu (#6126)

--- a/packages/app-desktop/package.json
+++ b/packages/app-desktop/package.json
@@ -116,6 +116,7 @@
     "app-builder-bin": "^1.9.11",
     "babel-cli": "^6.26.0",
     "babel-preset-react": "^6.24.1",
+    "canvas": "^2.9.0",
     "electron": "14.1.0",
     "electron-builder": "^22.11.7",
     "electron-notarize": "^1.0.0",
