--- a/.github/workflows/github-actions-main.yml
+++ b/.github/workflows/github-actions-main.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-2016]
+        # Removed windows-2016 for now - discontinued by GitHub
+        os: [macos-latest, ubuntu-latest]
     steps:
 
       # Silence apt-get update errors (for example when a module doesn't
