Plugins: Resolves #5867: Add support for "categories" manifest field (#6109)

--- a/packages/generator-joplin/generators/app/templates/src/manifest.json
+++ b/packages/generator-joplin/generators/app/templates/src/manifest.json
@@ -8,5 +8,6 @@
 	"author": "<%= pluginAuthor %>",
 	"homepage_url": "<%= pluginHomepageUrl %>",
 	"repository_url": "<%= pluginRepositoryUrl %>",
-	"keywords": []
+	"keywords": [],
+	"categories": []
 }
