--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -37,6 +37,7 @@
     "@joplin/renderer": "~2.7",
     "@joplin/turndown": "^4.0.61",
     "@joplin/turndown-plugin-gfm": "^1.0.43",
+    "@types/nanoid": "^3.0.0",
     "async-mutex": "^0.1.3",
     "base-64": "^0.1.0",
     "base64-stream": "^1.0.0",
