--- a/.github/workflows/github-actions-main.yml
+++ b/.github/workflows/github-actions-main.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         # Removed windows-2016 for now - discontinued by GitHub
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-2019]
     steps:
 
       # Silence apt-get update errors (for example when a module doesn't
