--- a/.gitignore
+++ b/.gitignore
@@ -222,6 +222,9 @@ packages/app-desktop/gui/Dialog.js.map
 packages/app-desktop/gui/DialogButtonRow.d.ts
 packages/app-desktop/gui/DialogButtonRow.js
 packages/app-desktop/gui/DialogButtonRow.js.map
+packages/app-desktop/gui/DialogButtonRow/useKeyboardHandler.d.ts
+packages/app-desktop/gui/DialogButtonRow/useKeyboardHandler.js
+packages/app-desktop/gui/DialogButtonRow/useKeyboardHandler.js.map
 packages/app-desktop/gui/DialogTitle.d.ts
 packages/app-desktop/gui/DialogTitle.js
 packages/app-desktop/gui/DialogTitle.js.map
@@ -1050,6 +1053,9 @@ packages/lib/database.js.map
 packages/lib/debug/DebugService.d.ts
 packages/lib/debug/DebugService.js
 packages/lib/debug/DebugService.js.map
+packages/lib/dom.d.ts
+packages/lib/dom.js
+packages/lib/dom.js.map
 packages/lib/dummy.test.d.ts
 packages/lib/dummy.test.js
 packages/lib/dummy.test.js.map
