--- a/.gitignore
+++ b/.gitignore
@@ -546,12 +546,18 @@ packages/app-desktop/gui/NoteEditor/utils/useWindowCommandHandler.js.map
 packages/app-desktop/gui/NoteList/NoteList.d.ts
 packages/app-desktop/gui/NoteList/NoteList.js
 packages/app-desktop/gui/NoteList/NoteList.js.map
+packages/app-desktop/gui/NoteList/NoteList2.d.ts
+packages/app-desktop/gui/NoteList/NoteList2.js
+packages/app-desktop/gui/NoteList/NoteList2.js.map
 packages/app-desktop/gui/NoteList/commands/focusElementNoteList.d.ts
 packages/app-desktop/gui/NoteList/commands/focusElementNoteList.js
 packages/app-desktop/gui/NoteList/commands/focusElementNoteList.js.map
 packages/app-desktop/gui/NoteList/commands/index.d.ts
 packages/app-desktop/gui/NoteList/commands/index.js
 packages/app-desktop/gui/NoteList/commands/index.js.map
+packages/app-desktop/gui/NoteList/types.d.ts
+packages/app-desktop/gui/NoteList/types.js
+packages/app-desktop/gui/NoteList/types.js.map
 packages/app-desktop/gui/NoteListControls/NoteListControls.d.ts
 packages/app-desktop/gui/NoteListControls/NoteListControls.js
 packages/app-desktop/gui/NoteListControls/NoteListControls.js.map
