Tools: Added precommit hook script to check lib paths

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buildSettingJsonSchema": "yarn workspace joplin start settingschema ../../../joplin-website/docs/schema/settings.json",
     "buildTranslations": "node packages/tools/build-translation.js",
     "buildWebsite": "node ./packages/tools/website/build.js && yarn run buildPluginDoc && yarn run buildSettingJsonSchema",
+    "checkLibPaths": "node ./packages/tools/checkLibPaths.js",
     "circularDependencyCheck": "madge --warning --circular --extensions js ./",
     "clean": "npm run clean --workspaces --if-present && node packages/tools/clean && yarn cache clean",
     "dependencyTree": "madge",
