--- a/.gitignore
+++ b/.gitignore
@@ -2004,6 +2004,12 @@ packages/tools/buildServerDocker.js.map
 packages/tools/buildServerDocker.test.d.ts
 packages/tools/buildServerDocker.test.js
 packages/tools/buildServerDocker.test.js.map
+packages/tools/checkLibPaths.d.ts
+packages/tools/checkLibPaths.js
+packages/tools/checkLibPaths.js.map
+packages/tools/checkLibPaths.test.d.ts
+packages/tools/checkLibPaths.test.js
+packages/tools/checkLibPaths.test.js.map
 packages/tools/convertThemesToCss.d.ts
 packages/tools/convertThemesToCss.js
 packages/tools/convertThemesToCss.js.map
