Desktop: Ask to start in safe mode when the application has crashed

--- a/.gitignore
+++ b/.gitignore
@@ -798,6 +798,9 @@ packages/app-desktop/services/plugins/hooks/useViewIsReady.js.map
 packages/app-desktop/services/plugins/hooks/useWebviewToPluginMessages.d.ts
 packages/app-desktop/services/plugins/hooks/useWebviewToPluginMessages.js
 packages/app-desktop/services/plugins/hooks/useWebviewToPluginMessages.js.map
+packages/app-desktop/services/restart.d.ts
+packages/app-desktop/services/restart.js
+packages/app-desktop/services/restart.js.map
 packages/app-desktop/services/share/invitationRespond.d.ts
 packages/app-desktop/services/share/invitationRespond.js
 packages/app-desktop/services/share/invitationRespond.js.map
