--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joplin/lib",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "Joplin Core library",
   "author": "Laurent Cozic",
   "homepage": "",
@@ -30,13 +30,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.34.0",
     "@aws-sdk/s3-request-presigner": "^3.34.0",
-    "@joplin/fork-htmlparser2": "^4.1.39",
-    "@joplin/fork-sax": "^1.2.43",
-    "@joplin/fork-uslug": "^1.0.4",
-    "@joplin/htmlpack": "~2.8",
-    "@joplin/renderer": "~2.8",
-    "@joplin/turndown": "^4.0.61",
-    "@joplin/turndown-plugin-gfm": "^1.0.43",
+    "@joplin/fork-htmlparser2": "^4.1.40",
+    "@joplin/fork-sax": "^1.2.44",
+    "@joplin/fork-uslug": "^1.0.5",
+    "@joplin/htmlpack": "^2.8.1",
+    "@joplin/renderer": "^2.8.1",
+    "@joplin/turndown": "^4.0.62",
+    "@joplin/turndown-plugin-gfm": "^1.0.44",
     "@types/nanoid": "^3.0.0",
     "async-mutex": "^0.1.3",
     "base-64": "^0.1.0",
