--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joplin/tools",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "Various tools for Joplin",
   "main": "index.js",
   "author": "Laurent Cozic",
@@ -20,8 +20,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@joplin/lib": "~2.8",
-    "@joplin/renderer": "~2.8",
+    "@joplin/lib": "^2.8.1",
+    "@joplin/renderer": "^2.8.1",
     "@types/node-fetch": "1.6.9",
     "@types/yargs": "16.0.3",
     "dayjs": "^1.10.7",
