Doc: Auto-generate RSS feed from news

--- a/.eslintignore
+++ b/.eslintignore
@@ -2098,6 +2098,9 @@ packages/tools/website/updateNews.js.map
 packages/tools/website/utils/frontMatter.d.ts
 packages/tools/website/utils/frontMatter.js
 packages/tools/website/utils/frontMatter.js.map
+packages/tools/website/utils/news.d.ts
+packages/tools/website/utils/news.js
+packages/tools/website/utils/news.js.map
 packages/tools/website/utils/openGraph.d.ts
 packages/tools/website/utils/openGraph.js
 packages/tools/website/utils/openGraph.js.map
