--- a/.gitignore
+++ b/.gitignore
@@ -2088,6 +2088,9 @@ packages/tools/website/updateNews.js.map
 packages/tools/website/utils/frontMatter.d.ts
 packages/tools/website/utils/frontMatter.js
 packages/tools/website/utils/frontMatter.js.map
+packages/tools/website/utils/news.d.ts
+packages/tools/website/utils/news.js
+packages/tools/website/utils/news.js.map
 packages/tools/website/utils/openGraph.d.ts
 packages/tools/website/utils/openGraph.js
 packages/tools/website/utils/openGraph.js.map
