--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -50,6 +50,7 @@
     "gettext-extractor": "^3.5.3",
     "gulp": "^4.0.2",
     "jest": "^26.6.3",
+    "rss": "^1.2.2",
     "sass": "^1.39.2",
     "sqlite3": "^5.0.0",
     "typescript": "^4.1.3"
