--- a/.gitignore
+++ b/.gitignore
@@ -909,6 +909,15 @@ packages/app-mobile/components/NoteEditor/types.js.map
 packages/app-mobile/components/SelectDateTimeDialog.d.ts
 packages/app-mobile/components/SelectDateTimeDialog.js
 packages/app-mobile/components/SelectDateTimeDialog.js.map
+packages/app-mobile/components/SideMenu.d.ts
+packages/app-mobile/components/SideMenu.js
+packages/app-mobile/components/SideMenu.js.map
+packages/app-mobile/components/getResponsiveValue.d.ts
+packages/app-mobile/components/getResponsiveValue.js
+packages/app-mobile/components/getResponsiveValue.js.map
+packages/app-mobile/components/getResponsiveValue.test.d.ts
+packages/app-mobile/components/getResponsiveValue.test.js
+packages/app-mobile/components/getResponsiveValue.test.js.map
 packages/app-mobile/components/screens/ConfigScreen.d.ts
 packages/app-mobile/components/screens/ConfigScreen.js
 packages/app-mobile/components/screens/ConfigScreen.js.map
@@ -2206,3 +2215,6 @@ packages/tools/website/utils/types.d.ts
 packages/tools/website/utils/types.js
 packages/tools/website/utils/types.js.map
 # AUTO-GENERATED - EXCLUDED TYPESCRIPT BUILD
+packages/app-mobile/components/get-responsive-value.test.js
+packages/app-mobile/components/get-responsive-value.test.js
+packages/app-mobile/components/get-responsive-value.test.js
