--- a/.eslintignore
+++ b/.eslintignore
@@ -1973,6 +1973,15 @@ packages/pdf-viewer/hooks/useIsFocused.js.map
 packages/pdf-viewer/hooks/useIsVisible.d.ts
 packages/pdf-viewer/hooks/useIsVisible.js
 packages/pdf-viewer/hooks/useIsVisible.js.map
+packages/pdf-viewer/hooks/usePdfData.d.ts
+packages/pdf-viewer/hooks/usePdfData.js
+packages/pdf-viewer/hooks/usePdfData.js.map
+packages/pdf-viewer/hooks/useScaledSize.d.ts
+packages/pdf-viewer/hooks/useScaledSize.js
+packages/pdf-viewer/hooks/useScaledSize.js.map
+packages/pdf-viewer/main.d.ts
+packages/pdf-viewer/main.js
+packages/pdf-viewer/main.js.map
 packages/pdf-viewer/miniViewer.d.ts
 packages/pdf-viewer/miniViewer.js
 packages/pdf-viewer/miniViewer.js.map
