--- a/packages/app-mobile/package.json
+++ b/packages/app-mobile/package.json
@@ -91,6 +91,7 @@
     "@lezer/highlight": "^1.0.0",
     "@types/jest": "^28.1.3",
     "@types/react-native": "^0.64.4",
+    "@types/react-redux": "^7.1.24",
     "babel-plugin-module-resolver": "^4.1.0",
     "execa": "^4.0.0",
     "fs-extra": "^8.1.0",
