--- a/packages/app-mobile/package.json
+++ b/packages/app-mobile/package.json
@@ -89,6 +89,7 @@
     "@codemirror/view": "^6.0.0",
     "@joplin/tools": "~2.9",
     "@lezer/highlight": "^1.0.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^28.1.3",
     "@types/react-native": "^0.64.4",
     "@types/react-redux": "^7.1.24",
@@ -104,6 +105,7 @@
     "nodemon": "^2.0.12",
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.0.5",
     "uglify-js": "^3.13.10",
     "webpack": "^5.74.0"
